2010-04-15  Roland McGrath  <roland@redhat.com>

	* eu.am (DEFS): Add -DLOCALEDIR=... here.

2010-02-15  Roland McGrath  <roland@redhat.com>

	* eu.am: New file.

2009-04-19  Roland McGrath  <roland@redhat.com>

	* version.h.in: Revert last change.

2009-04-17  Roland McGrath  <roland@redhat.com>

	* version.h.in (_ELFUTILS_PREREQ): Multiple major by 1000000 and minor
	by 1000; now _ELFUTILS_VERSION is 789000 for version 0.789.

2009-01-22  Ulrich Drepper  <drepper@redhat.com>

	* elfutils.spec.in: Distribute <elfutils/version.h> in
	elfutils-libelf-devel.

2009-01-22  Roland McGrath  <roland@redhat.com>

	* known-dwarf.awk: Handle DW_FOO_BAR_* sets better.

2009-01-11  Roland McGrath  <roland@redhat.com>

	* known-dwarf.awk: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2008-12-24  Roland McGrath  <roland@redhat.com>

	* Makefile.am ($(srcdir)/elfutils.spec.in): Rewrite awk magic.
	Put the target inside [if MAINTAINER_MODE].

2008-12-16  Roland McGrath  <roland@redhat.com>

	* version.h.in: New file.

2008-01-12  Ulrich Drepper  <drepper@redhat.com>

	* elfutils.spec.in: Add m4 to build requirements.

2008-01-02  Ulrich Drepper  <drepper@redhat.com>

	* elfutils.spec.in: Changes for disasm branch merge.

2007-08-08  Roland McGrath  <roland@redhat.com>

	* elfutils.spec.in (License): Canonicalize.

2007-04-23  Roland McGrath  <roland@redhat.com>

	* elfutils.spec.in: Distribute eu-unstrip.

2005-08-13  Roland McGrath  <roland@redhat.com>

	* Makefile.am ($(srcdir)/elfutils.spec.in): Add missing $.

2005-07-28  Roland McGrath  <roland@redhat.com>

	* elfutils.spec.in: Remove libdwfl.so from package.

2005-07-21  Ulrich Drepper  <drepper@redhat.com>

	* elfutils.spec.in: Distribute eu-elfcmp.

2005-04-01  Ulrich Drepper  <drepper@redhat.com>

	* elfutils.spec.in: Distribute eu-addr2line.

2005-03-17  Ulrich Drepper  <drepper@redhat.com>

	* elfutils.spec.in: Distribute libdw.{a,so,h}.

2005-02-22  Ulrich Drepper  <drepper@redhat.com>
